<resources>
    <string name="app_name">Blog Application</string>
    <string name="display_activity">My Blogs</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up">Create Account</string>
    <string name="post_title">Title</string>
    <string name="post_description">Post Description</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>